--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-color: #373943 !important
 }
+h1, h3 {
+  color: white;
+}
+.form-position{
+  text-align: center;
+  margin: 50px auto 0 auto;
+  border: 5px solid white;
+  width:50% ;
+ 
+ }
+ .preheading{
+
+ }
+.topheading{
+  text-decoration: underline;
+}
+ #activity{
+  color: white;
+
+ }
+ #participants{
+  color: white;
+
+ }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
